tests/NormalTests/paczka1/fuzzy1/50523818.err
Error in line 8: vLdX6OsaqqN S940 81,8
Error in line 7: 21UOLM7D A611 90,1
Error in line 13: vLdX6OsaqqN A557 19,3
Error in line 35: A611 A611 17,1
Error in line 34: vLdX6OsaqqN A611 236,6
